--- a/lat_the.css
+++ b/lat_the.css
@@ -6,14 +6,20 @@
 body {
   font-family: Arial, sans-serif;
   text-align: center;
-  background-color: grey;
+  background-image: url(border_img/Border7.png);
+  
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 .wrapper {
   margin-top: 50px;
 }
 h1 {
-  font-size: 24px;
+  font-size: 44px;
   margin-bottom: 10px;
+  color: rgb(58, 0, 129);
+  text-shadow: 2px 2px 4px rgba(96, 43, 0, 0.5); 
+  transition: color 0.3s ease-in-out; 
 }
 h3 {
   font-size: 18px;
@@ -23,7 +29,6 @@ h3 {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   margin: 0 auto;
-  background: url(border_img/Border1.png);
   background-size: 100% 100%;
   height: 500px;
   width: 800px;
@@ -42,9 +47,18 @@ h3 {
   height: 100%;
   border-radius: 5px;
 }
-input[type="button"]{
-  background-color: aqua;
-  padding: 10px 20px 10px 20px;
-  margin-top: 15px;
+.button{
+  background-color: transparent;
+  padding: 10px 20px 10px 20px; 
+  border: none;
+  position: absolute;
+  top: 545px;
+  left : 123px;
+  font-size: 40px;
+  color: black;
 }
-
+.button-content {
+  font-family: "Permanent Marker", cursive;
+  font-weight: 400;
+  font-style: normal;
+}
